<resources>
    <string name="app_name">RandomRingtone</string>
    <string name="add_folder">폴더 추가</string>
    <string name="empty_folder_list">등록된 폴더가 없습니다.</string>
    <string name="tab_ringtone">벨소리</string>
    <string name="tab_alarm">알람</string>
    <string name="tab_notification">알림</string>
    <string name="delete_folder_title">폴더 삭제</string>
    <string name="delete_folder_message">"%1$s"를 삭제할까요?</string>
    <string name="delete_folder_confirm">삭제</string>
    <string name="delete_confirmation_default">선택한 폴더</string>
    <string name="delete_selected">선택 삭제</string>
    <string name="delete_selected_title">선택 항목 삭제</string>
    <string name="delete_selected_message">선택한 %1$d개 항목을 삭제할까요?</string>
    <string name="add_choice_title">무엇을 추가할까요?</string>
    <string name="add_choice_folder">폴더 선택</string>
    <string name="add_choice_files">음악 파일 선택</string>
    <string name="add_choice_folder_all_files">폴더 안의 모든 음악 파일</string>
    <string name="add_more_folders_title">폴더 추가</string>
    <string name="add_more_folders_message">폴더를 더 추가하시겠어요?</string>
    <string name="delete_menu_title">삭제</string>
    <string name="delete_all">전체 삭제</string>
    <string name="delete_all_title">전체 삭제</string>
    <string name="delete_all_message">현재 탭의 모든 항목을 삭제할까요?</string>
    <string name="cancel_selection">선택 취소</string>
    <string name="menu">메뉴</string>
    <string name="export">내보내기</string>
    <string name="export_success">내보내기 완료</string>
    <string name="export_error">내보내기 실패</string>
    <string name="import1">불러오기</string>
    <string name="import_success">불러오기 완료</string>
    <string name="import_error">불러오기 실패</string>
    <string name="import_invalid_file">유효하지 않은 파일입니다</string>
    <string name="search_hint">검색...</string>
    <string name="loading">로딩 중...</string>
    <string name="loading_progress">로딩 중... %1$d/%2$d</string>
    <string name="manual">설명서</string>
    <string name="manual_title">설명서</string>
    <string name="play">재생</string>
    <string name="pause">일시정지</string>
    <string name="previous">이전곡</string>
    <string name="next">다음곡</string>
    <string name="load_playlist">재생목록 불러오기</string>
    <string name="adding_items">항목 추가 중...</string>
    <string name="adding_progress">%1$d/%2$d</string>
    <string name="auto_scroll_on_track_change"># 곡 넘어갈때 자동 스크롤</string>
    <string name="auto_play_next"># 곡 자동으로 넘기기</string>
    <string name="filter_all">전체</string>
    <string name="filter_checked">체크한것만</string>
    <string name="filter_unchecked">체크안한것만</string>
    <string name="hide_search_bar"># 하단 검색창 숨기기</string>
    <string name="hide_filter_options"># 상단 옵션창 숨기기</string>
    <string name="check_all">전체 체크</string>
    <string name="uncheck_all">전체 체크해제</string>
    <string name="hide_check_all_buttons"># 전체 체크/체크해제 버튼 숨기기</string>
    <string name="auto_apply_ringtone"># 벨소리 자동적용</string>
    <string name="auto_apply_alarm"># 알람 자동적용</string>
    <string name="auto_apply_notification"># 알림 자동적용</string>
</resources>